--- a/sample_website2_booking.html
+++ b/sample_website2_booking.html
@@ -42,7 +42,7 @@
 			<form style="text-align: center">
 				<fieldset>
 					<legend>Checkout form</legend><br><br>
-					<img src="master&visa.png" style="height: 50px; width: 150px"></img><br>
+					<img src="master&visa.PNG" style="height: 50px; width: 150px"></img><br>
 					<div>
 						<label>Select Payment method:&nbsp</label>
 					<label>Credit/Debit Card</label>
